# raytracer

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: aabb.rs  camera.rs  color.rs  hitable.rs  image.rs  lib.rs  main.rs  material.rs  math.rs  obj_reader.rs  ray.rs  ray_image.rs  texture.rs
src/hitable/: bvh.rs  mod.rs  sphere.rs  triangle.rs
src/texture/: checker.rs  constant.rs  mod.rs  perlin.rs
